# C-Primer-Exercise

./: CMakeLists.txt
Code/1.1.1/1.1/: CMakeLists.txt
Code/1.2/1.4/: main.cpp
Code/1.2/1.5/: main.cpp
Code/1.2/1.6/: main.cpp
Code/1.3/1.7/: main.cpp
Code/1.3/1.8/: main.cpp
Code/1.4.1/1.10/: main.cpp
Code/1.4.1/1.11/: main.cpp
Code/1.4.1/1.9/: main.cpp
Code/1.4.2/1.12/: main.cpp
Code/1.4.2/1.13/: main.cpp
Code/1.4.2/1.14/: main.cpp
Code/1.4.2/1.15/: main.cpp
Code/1.4.4/1.17/: main.cpp
Code/1.4.4/1.18/: CMakeLists.txt  main.cpp
Code/1.5.1/1.20/: main.cpp
Code/1.5.1/1.21/: main.cpp
Code/1.5.1/1.22/: main.cpp
Code/1.6/: CMakeLists.txt
Code/1.6/1.25/: main.cpp
Code/2.1.2/2.4/: main.cpp
Code/2.1.3/2.5/: main.cpp
Code/2.1.3/2.6/: main.cpp
Code/2.1.3/2.7/: main.cpp
Code/2.1.3/2.8/: main.cpp
Code/2.2.1/2.10/: main.cpp
Code/2.2.1/2.9/: main.cpp
Code/2.2.2/2.11/: text.txt
Code/2.2.3/2.12/: text.txt
Code/2.2.4/2.13/: main.cpp
Code/2.2.4/2.14/: main.cpp
Code/2.3.1/2.15/: main.cpp
Code/2.3.1/2.16/: main.cpp
Code/2.3.1/2.17/: main.cpp
Code/2.3.2/2.18/: main.cpp
Code/2.3.2/2.19/: main.cpp
Code/2.3.2/2.20/: main.cpp
Code/2.3.2/2.21/: main.cpp
Code/2.3.2/2.22/: main.cpp
Code/2.3.2/2.23/: main.cpp
Code/2.3.2/2.24/: main.cpp
Code/2.3.3/2.25/: text.txt
Code/2.4.3/2.30/: text.txt
Code/2.4.3/2.31/: text.txt
Code/2.4.4/2.32/: main.cpp
Code/2.4/2.26/: text.txt
Code/2.5.2/2.33/: text.txt
Code/2.5.2/2.34/: main.cpp
Code/2.5.2/2.35/: main.cpp
Code/Test/TypeConversions/: main.cpp
